데이터 접근 계층 외의 계층에서 Hibernate Spatial 의존성 제거 (#110)
* refactor: repository 클래스들을 동일 패키지에 이동

* chore: QueryDSL SQL Spatial 의존성 추가

* refactor: 기존 Native query를 사용하는 방식에서 QueryDSL로 변경

* refactor: 위도, 경도 매개변수 순서 변경

* test: 변경된 메서드 스펙에 따라 테스트 코드 수정

* refactor: 더 이상 사용하지 않는 메서드 제거